make blog swiper mobile responsive (e.g. fix spacing issues)

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -802,7 +802,7 @@ button.swiper-pagination-bullet {
     padding: 0 15px;
 }
 .two .swiper-slide {
-    width: 400px;
+    //width: 400px;
 }
 .swiper-slide img {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
